tests/security/taintedInputFromFunctionReturnType/output.txt
ERROR: TaintedData - input.hack:6:6 - Data from a URL query string found its way to an HTML tag using path $_GET --array-fetch--> $_GET['name'] (input.hack:2:10) ----> $a (input.hack:2:5) ----> return (input.hack:3:12) ----> call to getName (input.hack:1:22) ----> call to echo (input.hack:6:6) ----> echo#1 (input.hack:6:1)